# C-C-tasks

./: README.md
task1/: main.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h
task4/: CMakeLists.txt  Test.cpp  format.cpp  format.h
task4/task4/: format.cpp
task5/: CMakeLists.txt  Test.cpp  format.cpp  format.h
